# Caster

./: .clang-format  CMakeLists.txt  README.md
include/: caster.h  player.h  stdafx.h
src/: caster.c  caster.h  main.c  player.c  player.h  stdafx.h
